# huffman-coding

./: Cargo.toml
src/: convert.rs  decoder.rs  encode.rs  encoder.rs  main.rs  queue.rs  tree.rs  types.rs  ui.rs
src/types/: data.rs  node.rs  table.rs  ui.rs
