[package]
name    = "huffman-coding"
version = "0.1.0"
authors = ["KrutNA <krutna@pm.me>"]
edition = "2018"

[features]
default     = [ "color", "color", "suggestions", "wrap_help" ]

color       = [ "clap/color" ]
suggestions = [ "clap/suggestions" ]
wrap_help   = [ "clap/wrap_help" ]

debug       = [ "ptree", "time" ]
time        = []

[dependencies]
ptree       = { version = "0.2.1", optional = true }
clap        = { version = "~2.27.0", default-features = false }